--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hypotrochoïde / Epitrochoïde – HTML5 Canvas (Topbar)</title>
+  <title>Hypotrochoïde / Epitrochoïde – HTML5 Canvas (Mobiel)</title>
   <style>
     :root{
       --panel-bg:#f7f7f9;
@@ -18,43 +18,39 @@
     body{margin:0; font: 16px/1.45 system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Helvetica Neue", Arial, Noto Sans, sans-serif; color:var(--text); background:#fff; display:flex; flex-direction:column;}
 
     /* --- Top panel above the canvas --- */
-    header.panel{position:sticky; top:0; z-index:10; background:var(--panel-bg); border-bottom:1px solid var(--panel-border); padding:10px var(--gap);}
+    header.panel{position:sticky; top:0; z-index:10; background:var(--panel-bg); border-bottom:1px solid var(--panel-border); padding: max(10px, env(safe-area-inset-top)) var(--gap) 10px var(--gap);}
     header .title{font-size:1.05rem; font-weight:700; margin:0 0 8px 0}
 
     /* Controls arranged responsively */
     .controls{display:grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap:10px var(--gap); align-items:center}
     .ctrl{display:grid; grid-template-columns: 1fr 1fr; gap:8px; align-items:center}
     .ctrl label{font-weight:600; font-size:0.95rem}
-    .ctrl input[type="number"]{width:100%; padding:8px 10px; border:1px solid #d1d5db; border-radius:6px}
-    .ctrl input[type="color"]{width:100%; height:40px; padding:0; border:1px solid #d1d5db; border-radius:6px}
+    .ctrl input[type="number"]{width:100%; padding:10px 12px; border:1px solid #d1d5db; border-radius:8px; min-height:44px}
+    .ctrl input[type="color"]{width:100%; height:44px; padding:0; border:1px solid #d1d5db; border-radius:8px}
     .ctrl input[type="range"]{width:100%}
 
     .buttons{display:flex; gap:8px; flex-wrap:wrap}
-    button{display:inline-flex; align-items:center; gap:6px; cursor:pointer; background:var(--accent); color:white; border:none; border-radius:8px; padding:10px 14px; font-weight:700; min-height:44px}
+    button{display:inline-flex; align-items:center; gap:6px; cursor:pointer; background:var(--accent); color:white; border:none; border-radius:10px; padding:10px 14px; font-weight:700; min-height:44px}
     button.ghost{background:#e5e7eb; color:#111827}
 
     .hint{margin-top:6px; color:#6b7280; font-size:0.9rem}
 
     /* --- Canvas area --- */
     main.canvas-wrap{position:relative; flex:1 1 auto; display:grid; place-items:center; padding:10px}
-    /* Canvas size is set via JS to be a centered square that fits on screen under the header. */
     canvas{display:block; background:#ffffff; border-radius:10px; box-shadow:0 8px 28px rgba(0,0,0,.08)}
-    #info{position:absolute; left:16px; top:16px; background:var(--info-bg); padding:8px 10px; border-radius:8px; font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; font-size:0.95rem; white-space:pre; backdrop-filter:saturate(180%) blur(2px)}
+    #info{position:absolute; left:16px; top:16px; background:var(--info-bg); padding:8px 10px; border-radius:8px; font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace; font-size:0.95rem; white-space:pre; backdrop-filter:saturate(180%) blur(2px)}
     #warn{position:absolute; left:16px; bottom:16px; background:#ffe9e9; color:#7a0b0b; border:1px solid #f3b9b9; padding:8px 10px; border-radius:8px; display:none}
 
-    /* Larger screens: compact the rows a bit */
-    @media (min-width: 960px){
-      header .title{font-size:1.15rem}
-    }
+    @media (min-width: 960px){ header .title{font-size:1.15rem} }
   </style>
 </head>
 <body>
   <header class="panel" id="topbar">
     <div class="title">Hypotrochoïde / Epitrochoïde</div>
     <div class="controls">
-      <div class="ctrl"><label for="R1">R1 (natuurlijk)</label><input id="R1" type="number" min="1" step="1" value="35"></div>
-      <div class="ctrl"><label for="R2">R2 (geheel)</label><input id="R2" type="number" step="1" value="-12"></div>
-      <div class="ctrl"><label for="delta">δ (% van |R2|)</label><input id="delta" type="number" min="0" max="300" step="1" value="75"></div>
+      <div class="ctrl"><label for="R1">R1 (natuurlijk)</label><input id="R1" type="number" min="1" step="1" value="14"></div>
+      <div class="ctrl"><label for="R2">R2 (geheel)</label><input id="R2" type="number" step="1" value="-5"></div>
+      <div class="ctrl"><label for="delta">δ (% van |R2|)</label><input id="delta" type="number" min="0" max="300" step="1" value="150"></div>
       <div class="ctrl"><label for="curveColor">Kleur curve</label><input id="curveColor" type="color" value="#0074D9"></div>
       <div class="ctrl"><label for="bgColor">Achtergrond</label><input id="bgColor" type="color" value="#ffffff"></div>
       <div class="ctrl"><label for="speed">Snelheid</label><input id="speed" type="range" min="1" max="100" step="1" value="35"></div>
@@ -83,14 +79,24 @@
   const warn = $("warn");
   const topbar = $("topbar");
 
-  // Compute a square canvas that fits below the header on any screen
+  // Use VisualViewport (when available) for immediate, precise sizing on mobile
+  function viewportSize(){
+    const vv = window.visualViewport;
+    if (vv && typeof vv.width === 'number' && typeof vv.height === 'number') {
+      return { w: Math.floor(vv.width), h: Math.floor(vv.height) };
+    }
+    const w = Math.max(document.documentElement.clientWidth, window.innerWidth || 0);
+    const h = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
+    return { w, h };
+  }
+
   function sizeCanvas(){
-    const vw = Math.max(document.documentElement.clientWidth, window.innerWidth || 0);
-    const vh = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
-    const headerH = topbar.offsetHeight || 0;
-    const availW = vw - 20; // padding margin
-    const availH = vh - headerH - 20;
-    const side = Math.max(200, Math.min(availW, availH));
+    const {w: vw, h: vh} = viewportSize();
+    const headerH = topbar.getBoundingClientRect().height || 0;
+    const pad = 10; // same as CSS padding
+    const availW = Math.max(160, vw - 2*pad);
+    const availH = Math.max(160, vh - headerH - 2*pad);
+    const side = Math.max(160, Math.min(availW, availH));
     c.style.width = side + 'px';
     c.style.height = side + 'px';
     setupHiDPI();
@@ -107,7 +113,17 @@
     ctx.setTransform(ratio, 0, 0, ratio, 0, 0);
   }
 
-  window.addEventListener('resize', () => { sizeCanvas(); recompute(); draw(); });
+  // Respond to all relevant viewport changes for instant scaling
+  function bindResizeEvents(){
+    const recalc = () => { sizeCanvas(); recompute(); draw(); };
+    window.addEventListener('resize', recalc, {passive:true});
+    window.addEventListener('orientationchange', recalc, {passive:true});
+    window.addEventListener('pageshow', recalc, {passive:true});
+    if (window.visualViewport) {
+      window.visualViewport.addEventListener('resize', recalc, {passive:true});
+      window.visualViewport.addEventListener('scroll', recalc, {passive:true}); // address bar show/hide
+    }
+  }
 
   // Helpers
   const TAU = Math.PI * 2;
@@ -122,7 +138,7 @@
   const btnReset = $("reset");
 
   // Model state
-  let R1=35, R2=-12, delta=75;
+  let R1=14, R2=-5, delta=150;
   let curveColor = '#0074D9', bgColor = '#ffffff';
   let running = false;
   let t = 0, tEnd = 0, k = 0, x1 = 0;
@@ -165,9 +181,7 @@
     t = 0; lastTs = 0;
   }
 
-  function worldToCanvas(x, y){
-    return [cx + x*scale, cy - y*scale]; // y omgekeerd
-  }
+  function worldToCanvas(x, y){ return [cx + x*scale, cy - y*scale]; }
 
   function speedRadPerSec(){
     const s = +inputs.speed.value; // 1..100
@@ -257,11 +271,11 @@
   btnPlay.addEventListener('click', () => { if(R2 === 0) return; running = !running; btnPlay.textContent = running ? '❚❚ Pauze' : '▶︎ Afspelen'; });
   btnReset.addEventListener('click', () => { recompute(); running = false; btnPlay.textContent = '▶︎ Afspelen'; draw(); });
 
-  // Init
+  // Init: size immediately (twice) so it fits exact mobile viewport including dynamic bars
+  bindResizeEvents();
   sizeCanvas();
-  recompute();
-  draw();
-  requestAnimationFrame(frame);
+  // A second pass on next frame stabilizes after fonts/UI settle (mobile browsers)
+  requestAnimationFrame(() => { sizeCanvas(); recompute(); draw(); requestAnimationFrame(frame); });
 })();
 </script>
 </body>
