Adjust info box font size and tip text
Updated the font size of the info box and simplified the tip text.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     /* --- Canvas area --- */
     main.canvas-wrap{  position: relative;  display: grid;  place-items: center;  padding: 10px}
     canvas{display:block; background:#ffffff; border-radius:10px; box-shadow:0 8px 28px rgba(0,0,0,.08)}
-    #info{position:absolute; left:16px; top:16px; background:var(--info-bg); padding:8px 10px; border-radius:8px; font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace; font-size:0.95rem; white-space:pre; backdrop-filter:saturate(180%) blur(2px)}
+    #info{position:absolute; left:16px; top:16px; background:var(--info-bg); padding:8px 10px; border-radius:8px; font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace; font-size:0.6rem; white-space:pre; backdrop-filter:saturate(180%) blur(2px)}
     #warn{position:absolute; left:16px; bottom:16px; background:#ffe9e9; color:#7a0b0b; border:1px solid #f3b9b9; padding:8px 10px; border-radius:8px; display:none}
     #c{width: min(95svw, 95svh); height: auto;  aspect-ratio: 1 / 1;  background: #fff;  border-radius: 10px}
 
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div class="hint">
-      Tip: Negatieve R2 ⇒ binnenrol (hypotrochoïde). Positieve R2 ⇒ buitenrol (epitrochoïde). δ bepaalt de afstand van het getraceerde punt t.o.v. het middelpunt van de rollende cirkel (als percentage van |R2|).
+      Tip: R2<0 : hypotrochoïde;R2>0 : epitrochoïde.
     </div>
   </header>
 
