--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
   <header class="panel" id="topbar">
     <div class="title">Hypotrochoïde / Epitrochoïde</div>
     <div class="controls">
-      <div class="ctrl"><label for="R1">R1 (natuurlijk)</label><input id="R1" type="number" min="1" step="1" value="35"></div>
-      <div class="ctrl"><label for="R2">R2 (geheel)</label><input id="R2" type="number" step="1" value="-12"></div>
+      <div class="ctrl"><label for="R1">R1 </label><input id="R1" type="number" min="1" step="1" value="35"></div>
+      <div class="ctrl"><label for="R2">R2 </label><input id="R2" type="text" inputmode="numeric" pattern="-?\d*" autocomplete="off" enterkeyhint="done" value="-12"></div>
       <div class="ctrl"><label for="delta">δ (% van |R2|)</label><input id="delta" type="number" min="0" max="300" step="1" value="75"></div>
       <div class="ctrl"><label for="curveColor">Kleur curve</label><input id="curveColor" type="color" value="#0074D9"></div>
       <div class="ctrl"><label for="bgColor">Achtergrond</label><input id="bgColor" type="color" value="#ffffff"></div>
@@ -151,13 +151,22 @@
   let points = []; // trace
   let scale = 1, cx = 0, cy = 0;
 
-  function readInputs(){
-    R1 = Math.max(1, Math.trunc(+inputs.R1.value || 1));
-    R2 = Math.trunc(+inputs.R2.value || -1);
-    delta = +inputs.delta.value || 0;
-    curveColor = inputs.curveColor.value || '#0074D9';
-    bgColor = inputs.bgColor.value || '#ffffff';
-  }
+
+function readInt(el, fallback = 0){
+  const s = (el.value || "").trim();
+  // alleen optioneel '-' + digits
+  const m = s.match(/^-?\d+$/);
+  return m ? parseInt(s, 10) : fallback;
+}
+
+function readInputs(){
+  R1 = Math.max(1, readInt(inputs.R1, 1));
+  R2 = readInt(inputs.R2, -1);      // <— accepteert nu netjes het minteken
+  delta = readInt(inputs.delta, 0);
+  curveColor = inputs.curveColor.value || '#0074D9';
+  bgColor    = inputs.bgColor.value || '#ffffff';
+}
+
 
   function recompute(){
     readInputs();
