--- a/index.html
+++ b/index.html
@@ -11,52 +11,95 @@
       --text:#111827;
       --accent:#2563eb;
       --info-bg:rgba(255,255,255,0.85);
-      --gap:12px;
+      --gap:10px; /* compacter dan voorheen */
     }
     *{box-sizing:border-box}
     html, body{height:100%}
-    body{margin:0; font: 16px/1.45 system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Helvetica Neue", Arial, Noto Sans, sans-serif; color:var(--text); background:#fff; display:flex; flex-direction:column;}
+    body{
+      margin:0;
+      font: 15px/1.4 system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, "Helvetica Neue", Arial, Noto Sans, sans-serif;
+      color:var(--text);
+      background:#fff;
+      display:flex; flex-direction:column;
+    }
 
-    /* --- Top panel above the canvas --- */
-    header.panel{position:sticky; top:0; z-index:10; background:var(--panel-bg); border-bottom:1px solid var(--panel-border); padding: max(10px, env(safe-area-inset-top)) var(--gap) 10px var(--gap);}    
-    header .title{font-size:1.05rem; font-weight:700; margin:0 0 8px 0}
+    /* --- Top panel --- */
+    header.panel{
+      position:sticky; top:0; z-index:10;
+      background:var(--panel-bg);
+      border-bottom:1px solid var(--panel-border);
+      padding: max(8px, env(safe-area-inset-top)) var(--gap) 8px var(--gap);
+    }
+    header .title{font-size:1.0rem; font-weight:700; margin:0 0 6px 0}
 
-    /* Controls arranged responsively */
-    .controls{display:grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap:10px var(--gap); align-items:center}
-    .ctrl{display:grid; grid-template-columns: 1fr 1fr; gap:8px; align-items:center}
-    .ctrl label{font-weight:600; font-size:0.95rem}
-    .ctrl input[type="number"]{width:100%; padding:10px 12px; border:1px solid #d1d5db; border-radius:8px; min-height:44px}
-    .ctrl input[type="color"]{width:100%; height:44px; padding:0; border:1px solid #d1d5db; border-radius:8px}
+    /* Controls compacter */
+    .controls{
+      display:grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap:8px var(--gap); /* compacter */
+      align-items:center;
+    }
+    .ctrl{display:grid; grid-template-columns: 1fr 1fr; gap:6px; align-items:center}
+    .ctrl label{font-weight:600; font-size:0.9rem}
+    .ctrl input[type="number"]{
+      width:100%; padding:6px 8px; border:1px solid #d1d5db; border-radius:6px; min-height:32px; font-size:0.95rem;
+    }
+    .ctrl input[type="color"]{
+      width:100%; height:32px; padding:0; border:1px solid #d1d5db; border-radius:6px;
+    }
     .ctrl input[type="range"]{width:100%}
 
-    .buttons{display:flex; gap:8px; flex-wrap:wrap}
-    button{display:inline-flex; align-items:center; gap:6px; cursor:pointer; background:var(--accent); color:white; border:none; border-radius:10px; padding:10px 14px; font-weight:700; min-height:44px}
+    /* Segmented toggle */
+    .segmented { display:inline-flex; border:1px solid #d1d5db; border-radius:8px; overflow:hidden; }
+    .segmented .seg {
+      background:#f3f4f6; color:#111827; padding:6px 10px; min-height:32px;
+      border:0; cursor:pointer; font-weight:600;
+    }
+    .segmented .seg + .seg { border-left:1px solid #d1d5db; }
+    .segmented .seg.active { background: var(--accent); color:#fff; }
+
+    .buttons{display:flex; gap:6px; flex-wrap:wrap}
+    button{
+      display:inline-flex; align-items:center; gap:6px; cursor:pointer;
+      background:var(--accent); color:white; border:none; border-radius:8px;
+      padding:8px 12px; font-weight:700; min-height:34px; font-size:0.95rem;
+    }
     button.ghost{background:#e5e7eb; color:#111827}
 
-    /* Tip + info naast elkaar */
-    .top-meta{display:flex; gap:12px; align-items:flex-start; flex-wrap:wrap; margin-top:6px}
-    .hint{color:#6b7280; font-size:0.9rem; padding:6px 10px; background:transparent; border-radius:8px}
-    .info{margin:0; /* <pre> reset */
-          background:var(--info-bg); padding:6px 8px; border-radius:8px;
-          font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
-          font-size:0.8rem; white-space:pre; line-height:1.25}
+    /* Tip + info */
+    .top-meta{display:flex; gap:10px; align-items:flex-start; flex-wrap:wrap; margin-top:6px}
+    .hint{color:#6b7280; font-size:0.9rem; padding:4px 8px; background:transparent; border-radius:6px}
+    .info{
+      margin:0; background:var(--info-bg); padding:6px 8px; border-radius:6px;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
+      font-size:0.8rem; white-space:pre; line-height:1.25
+    }
 
     /* --- Canvas area --- */
-    main.canvas-wrap{ position: relative; display: grid; place-items: center; padding: 10px}
+    main.canvas-wrap{ position: relative; display: grid; place-items: center; padding: 8px}
     /* Canvas scales to the screen; internal buffer is set in JS */
     #c{ width: min(95svw, 95svh); height: auto; aspect-ratio: 1 / 1; background: #ffffff; border-radius:10px; box-shadow:0 8px 28px rgba(0,0,0,.08)}
     #warn{position:absolute; left:16px; bottom:16px; background:#ffe9e9; color:#7a0b0b; border:1px solid #f3b9b9; padding:8px 10px; border-radius:8px; display:none}
 
-    @media (min-width: 960px){ header .title{font-size:1.15rem} }
+    @media (min-width: 960px){ header .title{font-size:1.1rem} }
   </style>
 </head>
 <body>
   <header class="panel" id="topbar">
     <div class="title">Hypotrochoïde / Epitrochoïde</div>
+
+    <!-- Nieuw: modus-knoppen -->
+    <div class="controls" style="margin-bottom:6px">
+      <div class="segmented" role="group" aria-label="Type curve">
+        <button id="btnHypo" class="seg" type="button" aria-pressed="false">Hypotrochoïde</button>
+        <button id="btnEpi" class="seg" type="button" aria-pressed="false">Epitrochoïde</button>
+      </div>
+    </div>
+
     <div class="controls">
-      <div class="ctrl"><label for="R1">R1 </label><input id="R1" type="number" min="1" step="1" value="35"></div>
-      <div class="ctrl"><label for="R2">R2 </label><input id="R2" type="text" inputmode="numeric" pattern="-?\d*" autocomplete="off" enterkeyhint="done" value="-12"></div>
-      <div class="ctrl"><label for="delta">δ (% van |R2|)</label><input id="delta" type="number" min="0" max="300" step="1" value="75"></div>
+      <div class="ctrl"><label for="R1">R1 (natuurlijk)</label><input id="R1" type="number" min="1" step="1" value="35"></div>
+      <div class="ctrl"><label for="R2">R2 (geheel)</label><input id="R2" type="number" step="1" value="-12"></div>
+      <div class="ctrl"><label for="delta">δ (% van R2)</label><input id="delta" type="number" min="0" max="300" step="1" value="75"></div>
       <div class="ctrl"><label for="curveColor">Kleur curve</label><input id="curveColor" type="color" value="#0074D9"></div>
       <div class="ctrl"><label for="bgColor">Achtergrond</label><input id="bgColor" type="color" value="#ffffff"></div>
       <div class="ctrl"><label for="speed">Snelheid</label><input id="speed" type="range" min="1" max="100" step="1" value="35"></div>
@@ -65,6 +108,7 @@
         <button id="reset" class="ghost">↺ Reset</button>
       </div>
     </div>
+
     <div class="top-meta">
       <div class="hint">Tip: R2&lt;0 ⇒ hypotrochoïde; R2&gt;0 ⇒ epitrochoïde.</div>
       <pre id="info" class="info"></pre>
@@ -95,11 +139,10 @@
     const h = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
     return { w, h };
   }
-
   function sizeCanvas(){
     const {w: vw, h: vh} = viewportSize();
     const headerH = topbar.getBoundingClientRect().height || 0;
-    const pad = 10; // same as CSS padding
+    const pad = 8; // same as CSS padding
     const availW = Math.max(160, vw - 2*pad);
     const availH = Math.max(160, vh - headerH - 2*pad);
     const side = Math.max(160, Math.min(availW, availH));
@@ -107,7 +150,6 @@
     c.style.height = side + 'px';
     setupHiDPI();
   }
-
   // HiDPI scaling
   function setupHiDPI() {
     const ratio = Math.max(1, window.devicePixelRatio || 1);
@@ -118,7 +160,6 @@
     c.height = Math.round(cssH * ratio);
     ctx.setTransform(ratio, 0, 0, ratio, 0, 0);
   }
-
   function bindResizeEvents(){
     const recalc = () => { sizeCanvas(); recompute(); draw(); };
     window.addEventListener('resize', recalc, {passive:true});
@@ -142,6 +183,27 @@
   const btnPlay = $("playPause");
   const btnReset = $("reset");
 
+  // Nieuw: mode toggle buttons
+  const btnHypo = $("btnHypo");
+  const btnEpi  = $("btnEpi");
+
+  function setModeButtons(sign){
+    const hypoActive = sign < 0;
+    btnHypo.classList.toggle('active', hypoActive);
+    btnEpi.classList.toggle('active', !hypoActive);
+    btnHypo.setAttribute('aria-pressed', hypoActive ? 'true' : 'false');
+    btnEpi.setAttribute('aria-pressed', hypoActive ? 'false' : 'true');
+  }
+  function setR2Sign(sign){
+    let v = Math.abs(parseInt(inputs.R2.value, 10));
+    if (!v) v = 1; // vermijd 0
+    inputs.R2.value = sign < 0 ? -v : v;
+    setModeButtons(sign);
+    onChange();
+  }
+  btnHypo.addEventListener('click', () => setR2Sign(-1));
+  btnEpi .addEventListener('click', () => setR2Sign( 1));
+
   // Model
   let R1=35, R2=-12, delta=75;
   let curveColor = '#0074D9', bgColor = '#ffffff';
@@ -151,22 +213,13 @@
   let points = []; // trace
   let scale = 1, cx = 0, cy = 0;
 
-
-function readInt(el, fallback = 0){
-  const s = (el.value || "").trim();
-  // alleen optioneel '-' + digits
-  const m = s.match(/^-?\d+$/);
-  return m ? parseInt(s, 10) : fallback;
-}
-
-function readInputs(){
-  R1 = Math.max(1, readInt(inputs.R1, 1));
-  R2 = readInt(inputs.R2, -1);      // <— accepteert nu netjes het minteken
-  delta = readInt(inputs.delta, 0);
-  curveColor = inputs.curveColor.value || '#0074D9';
-  bgColor    = inputs.bgColor.value || '#ffffff';
-}
-
+  function readInputs(){
+    R1 = Math.max(1, Math.trunc(+inputs.R1.value || 1));
+    R2 = Math.trunc(+inputs.R2.value || -1);
+    delta = +inputs.delta.value || 0;
+    curveColor = inputs.curveColor.value || '#0074D9';
+    bgColor = inputs.bgColor.value || '#ffffff';
+  }
 
   function recompute(){
     readInputs();
@@ -178,49 +231,42 @@ function readInputs(){
       draw();
       return;
     }
-
     const g = gcd(R1, R2);
     const omwentelingen = R2 / g; // kan negatief zijn
     tEnd = Math.abs(omwentelingen) * TAU;
     k = 1 + (R1 / R2);
     x1 = Math.abs(R2) * (delta/100);
 
-    // === Nieuwe, strakke schaal die alles in beeld houdt ===
-    // Bereik van de curve: max afstand tot oorsprong is |R1 + R2| + |x1|
-    const radialCurve  = Math.abs(R1 + R2) + Math.abs(x1);
-    // Grote vaste cirkel heeft straal |R1|
-    const radialBig    = Math.abs(R1);
-    // Optioneel: ook de rollende cirkel (omtrek) volledig tonen
-    const radialRoller = Math.abs(R1 + R2) + Math.abs(R2);
-
-    const radialExtent = Math.max(radialCurve, radialBig, radialRoller) || 1;
-
+    // Strakke schaal die alles in beeld houdt
+    const radialCurve = Math.abs(R1 + R2) + Math.abs(x1);
+    const radialBig   = Math.abs(R1);
+    const radialRoller= Math.abs(R1 + R2) + Math.abs(R2);
+    const radialExtent= Math.max(radialCurve, radialBig, radialRoller) || 1;
     const maxSide = Math.min(c.clientWidth, c.clientHeight);
-    const padding = 0.98; // kleine marge zodat er niets klipt
+    const padding = 0.98;
     scale = (padding * maxSide/2) / radialExtent;
-
     cx = c.clientWidth/2; cy = c.clientHeight/2;
 
     // Reset animatiestatus
     points = [];
     t = 0; lastTs = 0;
+
+    // Zorg dat de modusknoppen overeenkomen met het teken van R2
+    setModeButtons(Math.sign(R2));
   }
 
   function worldToCanvas(x, y){ return [cx + x*scale, cy - y*scale]; }
-
   function speedRadPerSec(){
     const s = +inputs.speed.value; // 1..100
     const durationSec = 33 - (s * 0.3); // ~33..3 s per cyclus
     return (tEnd || 1) / durationSec;
   }
-
   function update(dt){
     if(!running) return;
     const radPerSec = speedRadPerSec();
     t += radPerSec * dt;
     if(t > tEnd){ t = tEnd; running = false; btnPlay.textContent = '▶︎ Afspelen'; }
   }
-
   function draw(){
     // Achtergrond
     ctx.save();
@@ -271,12 +317,11 @@ function readInputs(){
     ctx.fillStyle = '#d62728'; ctx.beginPath(); ctx.arc(cxi, cyi, 4, 0, TAU); ctx.fill();
     ctx.fillStyle = '#2ca02c'; ctx.beginPath(); ctx.arc(cxR2, cyR2, 4, 0, TAU); ctx.fill();
 
-    // Live rotaties (in rot = rad/(2π))
+    // Live rotaties (in rotations = rad/(2π))
     const n_center = t / TAU; const n_abs = (k * t) / TAU; const n_rel = ((k * t) - t) / TAU;
-    info.textContent = `omwentelingen      : ${n_center.toFixed(4)} rot\n`+
+    info.textContent = `omwentelingen : ${n_center.toFixed(4)} rot\n`+
                        `relatieve rotaties : ${n_rel.toFixed(4)} rot\n`+
-                       `absolute rotaties  : ${n_abs.toFixed(4)} rot`;
-
+                       `absolute rotaties : ${n_abs.toFixed(4)} rot`;
     ctx.restore();
   }
 
@@ -293,12 +338,17 @@ function readInputs(){
     recompute(); running = wasRunning; btnPlay.textContent = running ? '❚❚ Pauze' : '▶︎ Afspelen';
   }
   Object.values(inputs).forEach(el => el.addEventListener('input', onChange));
+  // Als R2 handmatig wordt aangepast, pas de modusknoppen aan
+  inputs.R2.addEventListener('input', () => setModeButtons(Math.sign(+inputs.R2.value || -1)));
+
   btnPlay.addEventListener('click', () => { if(R2 === 0) return; running = !running; btnPlay.textContent = running ? '❚❚ Pauze' : '▶︎ Afspelen'; });
   btnReset.addEventListener('click', () => { recompute(); running = false; btnPlay.textContent = '▶︎ Afspelen'; draw(); });
 
   // Init
   bindResizeEvents();
   sizeCanvas();
+  // Initiale modus-knoppen toestand obv beginsituatie (R2 = -12)
+  setModeButtons(-1);
   requestAnimationFrame(() => { sizeCanvas(); recompute(); draw(); requestAnimationFrame(frame); });
 })();
 </script>
