--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     </div>
 
     <div class="controls">
-      <div class="ctrl"><label for="R1">R1 (natuurlijk)</label><input id="R1" type="number" min="1" step="1" value="35"></div>
-      <div class="ctrl"><label for="R2">R2 (geheel)</label><input id="R2" type="number" step="1" value="-12"></div>
+      <div class="ctrl"><label for="R1">R1 (vast)</label><input id="R1" type="number" min="1" step="1" value="35"></div>
+      <div class="ctrl"><label for="R2">R2 (rollend)</label><input id="R2" type="number" step="1" value="-12"></div>
       <div class="ctrl"><label for="delta">δ (% van R2)</label><input id="delta" type="number" min="0" max="300" step="1" value="75"></div>
       <div class="ctrl"><label for="curveColor">Kleur curve</label><input id="curveColor" type="color" value="#0074D9"></div>
       <div class="ctrl"><label for="bgColor">Achtergrond</label><input id="bgColor" type="color" value="#ffffff"></div>
