--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     }
     button.ghost{background:#e5e7eb; color:#111827}
 
-    /* Tip + info */
+    /* Tip + info (optioneel; info element ontbreekt in deze variant) */
     .top-meta{display:flex; gap:10px; align-items:flex-start; flex-wrap:wrap; margin-top:6px}
     .hint{color:#6b7280; font-size:0.9rem; padding:4px 8px; background:transparent; border-radius:6px}
     .info{
@@ -88,11 +88,11 @@
   <header class="panel" id="topbar">
     <div class="title">De Wondere Wereld - Spirograph</div>
 
-    <!-- Nieuw: modus-knoppen -->
+    <!-- Modus-knoppen -->
     <div class="controls" style="margin-bottom:6px">
       <div class="segmented" role="group" aria-label="Type curve">
         <button id="btnHypo" class="seg" type="button" aria-pressed="false">Hypotrochoïde</button>
-        <button id="btnEpi" class="seg" type="button" aria-pressed="false">Epitrochoïde</button>
+        <button id="btnEpi"  class="seg" type="button" aria-pressed="false">Epitrochoïde</button>
       </div>
     </div>
 
@@ -109,7 +109,12 @@
       </div>
     </div>
 
-
+    <!-- Als je de live-info terug wilt, voeg hier dit blok toe:
+    <div class="top-meta">
+      <div class="hint">Tip: R2&lt;0 ⇒ hypotrochoïde; R2&gt;0 ⇒ epitrochoïde.</div>
+      <pre id="info" class="info"></pre>
+    </div>
+    -->
   </header>
 
   <main class="canvas-wrap">
@@ -122,10 +127,12 @@
   const $ = (id) => document.getElementById(id);
   const c = $("c");
   const ctx = c.getContext("2d");
-  const info = $("info");
+  const info = $("info");              // kan null zijn in deze variant
   const warn = $("warn");
   const topbar = $("topbar");
-  const GRAY_STROKE = '#888888';  // middelgrijs
+
+  const GRAY_STROKE = '#888888'; // middelgrijs
+
   // VisualViewport-aware sizing (mobile friendly)
   function viewportSize(){
     const vv = window.visualViewport;
@@ -180,7 +187,7 @@
   const btnPlay = $("playPause");
   const btnReset = $("reset");
 
-  // Nieuw: mode toggle buttons
+  // Modusknoppen
   const btnHypo = $("btnHypo");
   const btnEpi  = $("btnEpi");
 
@@ -192,162 +199,3 @@
     btnEpi.setAttribute('aria-pressed', hypoActive ? 'false' : 'true');
   }
   function setR2Sign(sign){
-    let v = Math.abs(parseInt(inputs.R2.value, 10));
-    if (!v) v = 1; // vermijd 0
-    inputs.R2.value = sign < 0 ? -v : v;
-    setModeButtons(sign);
-    onChange();
-  }
-  btnHypo.addEventListener('click', () => setR2Sign(-1));
-  btnEpi .addEventListener('click', () => setR2Sign( 1));
-
-  // Model
-  let R1=35, R2=-12, delta=75;
-  let curveColor = '#0074D9', bgColor = '#ffffff';
-  let running = false;
-  let t = 0, tEnd = 0, k = 0, x1 = 0;
-  let lastTs = 0;
-  let points = []; // trace
-  let scale = 1, cx = 0, cy = 0;
-
-  function readInputs(){
-    R1 = Math.max(1, Math.trunc(+inputs.R1.value || 1));
-    R2 = Math.trunc(+inputs.R2.value || -1);
-    delta = +inputs.delta.value || 0;
-    curveColor = inputs.curveColor.value || '#0074D9';
-    bgColor = inputs.bgColor.value || '#ffffff';
-  }
-
-  function recompute(){
-    readInputs();
-    warn.style.display = 'none';
-    if(R2 === 0){
-      warn.textContent = 'R2 mag niet 0 zijn.';
-      warn.style.display = 'block';
-      running = false; btnPlay.textContent = '▶︎ Afspelen';
-      draw();
-      return;
-    }
-    const g = gcd(R1, R2);
-    const omwentelingen = R2 / g; // kan negatief zijn
-    tEnd = Math.abs(omwentelingen) * TAU;
-    k = 1 + (R1 / R2);
-    x1 = Math.abs(R2) * (delta/100);
-
-    // Strakke schaal die alles in beeld houdt
-    const radialCurve = Math.abs(R1 + R2) + Math.abs(x1);
-    const radialBig   = Math.abs(R1);
-    const radialRoller= Math.abs(R1 + R2) + Math.abs(R2);
-    const radialExtent= Math.max(radialCurve, radialBig, radialRoller) || 1;
-    const maxSide = Math.min(c.clientWidth, c.clientHeight);
-    const padding = 0.98;
-    scale = (padding * maxSide/2) / radialExtent;
-    cx = c.clientWidth/2; cy = c.clientHeight/2;
-
-    // Reset animatiestatus
-    points = [];
-    t = 0; lastTs = 0;
-
-    // Zorg dat de modusknoppen overeenkomen met het teken van R2
-    setModeButtons(Math.sign(R2));
-  }
-
-  function worldToCanvas(x, y){ return [cx + x*scale, cy - y*scale]; }
-  function speedRadPerSec(){
-    const s = +inputs.speed.value; // 1..100
-    const durationSec = 33 - (s * 0.3); // ~33..3 s per cyclus
-    return (tEnd || 1) / durationSec;
-  }
-  function update(dt){
-    if(!running) return;
-    const radPerSec = speedRadPerSec();
-    t += radPerSec * dt;
-    if(t > tEnd){ t = tEnd; running = false; btnPlay.textContent = '▶︎ Afspelen'; }
-  }
-  function draw(){
-    // Achtergrond
-    ctx.save();
-    ctx.clearRect(0,0,c.clientWidth, c.clientHeight);
-    ctx.fillStyle = bgColor; ctx.fillRect(0,0,c.clientWidth, c.clientHeight);
-
-    // Kwaliteit
-    ctx.lineCap = 'round'; ctx.lineJoin = 'round';
-
-    // Huidige posities
-    const R1pR2 = R1 + R2;
-    const xmR2 = R1pR2 * Math.cos(t);
-    const ymR2 = R1pR2 * Math.sin(t);
-    const x = (R1pR2) * Math.cos(t) + x1 * Math.cos(k*t);
-    const y = (R1pR2) * Math.sin(t) + x1 * Math.sin(k*t);
-
-    // Trace
-    points.push([x,y]);
-
-    // Grote cirkel
-    ctx.strokeStyle = GRAY_STROKE; ctx.lineWidth = 1.0;
-    ctx.beginPath();
-    const [cx0, cy0] = worldToCanvas(0,0);
-    ctx.arc(cx0, cy0, Math.abs(R1)*scale, 0, TAU);
-    ctx.stroke();
-
-    // Kleine rollende cirkel
-    ctx.strokeStyle = GRAY_STROKE; ctx.lineWidth = 1.0;
-    ctx.beginPath();
-    const [cxR2, cyR2] = worldToCanvas(xmR2, ymR2);
-    ctx.arc(cxR2, cyR2, Math.abs(R2)*scale, 0, TAU);
-    ctx.stroke();
-
-    // Stralen
-    ctx.strokeStyle = GRAY_STROKE; ctx.lineWidth = 2; ctx.beginPath(); ctx.moveTo(cx0, cy0); ctx.lineTo(cxR2, cyR2); ctx.stroke();
-    ctx.strokeStyle = GRAY_STROKE; ctx.lineWidth = 2; ctx.beginPath(); const [cxi, cyi] = worldToCanvas(x, y); ctx.moveTo(cxR2, cyR2); ctx.lineTo(cxi, cyi); ctx.stroke();
-
-    // Trace tekenen
-    ctx.strokeStyle = curveColor; ctx.lineWidth = 1.6;
-    ctx.beginPath();
-    for(let i=0;i<points.length;i++){
-      const [px,py]=worldToCanvas(points[i][0], points[i][1]);
-      if(i===0) ctx.moveTo(px,py); else ctx.lineTo(px,py);
-    }
-    ctx.stroke();
-
-    // Punten
-    ctx.fillStyle = '#d62728'; ctx.beginPath(); ctx.arc(cxi, cyi, 4, 0, TAU); ctx.fill();
-    ctx.fillStyle = '#2ca02c'; ctx.beginPath(); ctx.arc(cxR2, cyR2, 4, 0, TAU); ctx.fill();
-
-    // Live rotaties (in rotations = rad/(2π))
-    const n_center = t / TAU; const n_abs = (k * t) / TAU; const n_rel = ((k * t) - t) / TAU;
-    info.textContent = `omwentelingen : ${n_center.toFixed(2)} rot\n`+
-                       `relatieve rotaties : ${n_rel.toFixed(2)} rot\n`+
-                       `absolute rotaties : ${n_abs.toFixed(2)} rot`;
-    ctx.restore();
-  }
-
-  function frame(ts){
-    if(!lastTs) lastTs = ts;
-    const dt = (ts - lastTs) / 1000; lastTs = ts;
-    update(dt); draw();
-    requestAnimationFrame(frame);
-  }
-
-  // Events
-  function onChange(){
-    const wasRunning = running;
-    recompute(); running = wasRunning; btnPlay.textContent = running ? '❚❚ Pauze' : '▶︎ Afspelen';
-  }
-  Object.values(inputs).forEach(el => el.addEventListener('input', onChange));
-  // Als R2 handmatig wordt aangepast, pas de modusknoppen aan
-  inputs.R2.addEventListener('input', () => setModeButtons(Math.sign(+inputs.R2.value || -1)));
-
-  btnPlay.addEventListener('click', () => { if(R2 === 0) return; running = !running; btnPlay.textContent = running ? '❚❚ Pauze' : '▶︎ Afspelen'; });
-  btnReset.addEventListener('click', () => { recompute(); running = false; btnPlay.textContent = '▶︎ Afspelen'; draw(); });
-
-  // Init
-  bindResizeEvents();
-  sizeCanvas();
-  // Initiale modus-knoppen toestand obv beginsituatie (R2 = -12)
-  setModeButtons(-1);
-  requestAnimationFrame(() => { sizeCanvas(); recompute(); draw(); requestAnimationFrame(frame); });
-})();
-</script>
-</body>
-</html>
