Update hint text format in index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <!-- Live info zichtbaar -->
     <div class="top-meta">
-      <div class="hint">Tip: R2&lt;0 ⇒ hypotrochoïde; R2&gt;0 ⇒ epitrochoïde.</div>
+      <div class="hint">info:R2&lt;0 ⇒ hypotrochoïde; R2&gt;0 ⇒ epitrochoïde.</div>
       <pre id="info" class="info"></pre>
     </div>
   </header>
